# pacabench

./: .gitignore  AGENTS.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  docker-compose.yml  main.py  package-lock.json  pyproject.toml  ruff.toml
.beads/: issues.jsonl
.github/workflows/: lint.yml  release-pypi.yml
agentbench/: __init__.py  analysis.py  cli.py  config.py  context.py  core.py  dashboard.py  datasets.py  evaluators.py  metrics.py  persistence.py  pipeline.py  proxy.py  results.py  runner.py  tui.py  types.py
agentbench/datasets/: __init__.py  base.py  gaia.py  git.py  hf.py  local.py  longmemeval.py  membench.py  types.py
agentbench/evaluators/: __init__.py  base.py  judge.py  matchers.py
agentbench/runners/: agentic_long_context.py  agentic_mem0.py  base.py  command.py  qa_long_context.py  qa_mem0.py
agentbench/stages/: __init__.py  case.py  evaluator.py  result.py  runner.py
crates/pacabench-cli/: Cargo.toml
crates/pacabench-cli/src/: formatting.rs  main.rs  pricing.rs  progress.rs
crates/pacabench-cli/tests/: cli_test.rs
crates/pacabench-core/: Cargo.toml
crates/pacabench-core/src/: benchmark.rs  config.rs  error.rs  evaluators.rs  events.rs  lib.rs  metrics.rs  orchestrator.rs  persistence.rs  pricing.rs  protocol.rs  proxy.rs  reporter.rs  retry.rs  run_manager.rs  runner.rs  state.rs  types.rs  worker.rs
crates/pacabench-core/src/datasets/: git.rs  huggingface.rs  local.rs  mod.rs
crates/pacabench-core/tests/: config_test.rs  datasets_test.rs  evaluators_test.rs  integration_test.rs  metrics_test.rs  persistence_test.rs  pricing_test.rs  proxy_test.rs  run_manager_test.rs
crates/pacabench-tui/: Cargo.toml
crates/pacabench-tui/src/: main.rs  state.rs  theme.rs  views.rs
data/MemBench/MemData/: README.md
docs/scripts/: record-readme-demos.sh  tui-demo
examples/gaia/: .gitignore  README.md  pacabench.yaml  prepare_dataset.py  pyproject.toml  smolagent_agent.py
examples/membench_qa_test/: agentbench.yaml  pacabench.yaml
examples/membench_qa_test/agents/: long_context_agent.py  mem0_agent.py  zep_graphiti_agent.py
examples/membench_qa_test/scripts/: prepare_membench.py
examples/smoke_test/: pacabench.yaml
examples/smoke_test/agents/: echo_agent.py
examples/smoke_test/data/: example.jsonl
memharness/: __init__.py  answerers.py  cli.py  configs.py  data.py  datasets.py  eval.py  evaluation.py  types.py
memharness/answerers/: __init__.py  gaia_agent.py  long_context.py  mem0.py  mem0_gaia.py  zep.py
memharness/datasets/: __init__.py  base.py  gaia.py  locomo.py  longmemeval.py  membench.py  webarena.py
memharness/executors/: __init__.py  agentlab.py  agentlab_longcontext.py  base.py  browser.py  gaia.py  mem0_gaia.py  mem0_qa.py  qa.py
memharness/mem0/: __init__.py  instrumentation.py
pacabench/: __init__.py  analysis.py  cli.py  context.py  core.py  dashboard.py  persistence.py  proxy.py  report.py  reporters.py  tui.py  types.py
pacabench/datasets/: __init__.py  base.py  git.py  hf.py  local.py
pacabench/engine/: __init__.py  dashboard.py  harness.py  proxy.py  reporters.py
pacabench/evaluators/: __init__.py  base.py  judge.py  matchers.py
pacabench/models/: __init__.py  case.py  config.py  metrics.py  run.py
pacabench/runners/: base.py  command.py
pacabench/storage/: __init__.py  results.py  runs.py
runners/agentic/: long_context_runner.py  mem0_runner.py  memorisdk_runner.py
runners/qa/: long_context_runner.py  mem0_runner.py  memorisdk_runner.py
