[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "memharness"
version = "0.1.0"
description = "LLM/Agent Memory benchmark harness for evaluating memory systems"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic-ai>=1.12.0",
    "tqdm>=4.67.1",
    "typer>=0.9.0",
    "numpy>=1.26.0",
    "rich>=13.0.0",
    "ruff>=0.14.4",
    "datasets>=4.4.1",
    "questionary>=2.1.1",
    "genai-prices>=0.0.36",
    "pydantic>=2.9",
    "huggingface-hub>=0.20.0",
    "smolagents[toolkit]>=1.0.0",
    "wikipedia-api>=0.7.0",
]

[project.scripts]
memharness = "memharness.cli:cli_main"

[project.optional-dependencies]
datasets = ["datasets"]  # HuggingFace datasets for on-demand download

[tool.setuptools.packages.find]
where = ["."]
include = ["memharness*"]
exclude = ["data*", "runs*", "tests*"]
